fixing all not thymeleaf paths for deployment

--- a/src/main/resources/templates/bookingAdd.html
+++ b/src/main/resources/templates/bookingAdd.html
@@ -27,7 +27,7 @@
 
                 <div class="my-3">
                     <input type="submit" value="Add Booking" class="btn btn-primary">
-                    <a href="/index" class="btn btn-danger align-items-end">Cancel</a>
+                    <a th:href="@{/index}" class="btn btn-danger align-items-end">Cancel</a>
                 </div>
             </form>
 
