--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -10,30 +10,30 @@
             <div class="row">
                 <!-- Card 1 -->
                 <div class="col-md-4 mb-4">
-                    <a href="/reports/prediction">
+                    <a th:href="@{/reports/prediction}">
                         <div class="card reportBth">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
-                                <img src="/img/icons/prediction.png" class="card-img" alt="Prediction">
+                                <img th:src="@{/img/icons/prediction.png}" class="card-img" alt="Prediction">
                                 <div class="overlay">Prediction</div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <a href="/reports/sale">
+                    <a th:href="@{/reports/sale}">
                         <div class="card reportBth">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
-                                <img src="/img/icons/sale.png" class="card-img-top" alt="Sale">
+                                <img th:src="@{/img/icons/sale.png}" class="card-img-top" alt="Sale">
                                 <div class="overlay">Sale</div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4 mb-4">
-                    <a href="/reports/waste">
+                    <a th:href="@{/reports/waste}">
                         <div class="card reportBth">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
-                                <img src="/img/icons/waste.png" class="card-img-top" alt="Waste">
+                                <img th:src="@{/img/icons/waste.png}" class="card-img-top" alt="Waste">
                                 <div class="overlay">Waste</div>
                             </div>
                         </div>
