--- a/src/main/resources/templates/reports/reportSale.html
+++ b/src/main/resources/templates/reports/reportSale.html
@@ -13,7 +13,7 @@
                     <button id="weekBtn" class="btn-primary btn m-1 p-1 chartbtn">Week</button>
                     <button id="dayBtn" class="btn-primary btn m-1 p-1 chartbtn">Day</button>
                     <input type="date" id="datePicker" class="p-1 date">
-                    <a href="/reports/main" class="btn btn-secondary">Back</a>
+                    <a th:href="@{/reports/main}" class="btn btn-secondary">Back</a>
                 </div>
             </div>
             <div class="row">
