--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -42,7 +42,7 @@
                                 </div>
                     </div>
                     <div>
-                        <a id="newUser" class="btn btn-secondary col" href="newuser">Add New User</a>
+                        <a id="newUser" class="btn btn-secondary col" th:href="@{newuser}">Add New User</a>
                     </div>
                 </div>
             </div>
