--- a/src/main/resources/templates/recipeSingle.html
+++ b/src/main/resources/templates/recipeSingle.html
@@ -24,7 +24,7 @@
             </tr>
             </tbody>
           </table>
-          <a href="/recipes/list" class="btn btn-secondary mt-5">Back</a>
+          <a th:href="@{/recipes/list}" class="btn btn-secondary mt-5">Back</a>
         </div>
         </div>
     </main>
