--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -10,8 +10,8 @@
             <div class="row">
                 <div class="row">
                     <div class="col">
-                        <a class="btn btn-secondary col" href="newrecipe">Add New Recipe</a>
-                        <a class="btn btn-primary col" href="newproduct">Products</a>
+                        <a class="btn btn-secondary col" th:href="@{newrecipe}">Add New Recipe</a>
+                        <a class="btn btn-primary col" th:href="@{newproduct}">Products</a>
                     </div>
                 </div>
                 <div class="col mt-5">
