--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -9,7 +9,7 @@
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
                 <div class="col col-md-5 col-sm-6 mt-5">
-                    <a href="/recipes/list" class="btn btn-secondary mb-3">Back</a>
+                    <a th:href="@{/recipes/list}" class="btn btn-secondary mb-3">Back</a>
                     <div th:replace="~{fragments/productList :: productList}"></div>
                 </div>
                 <div class="col col-md-1 blank"></div>
