--- a/src/main/resources/templates/recipesNewProduct.html
+++ b/src/main/resources/templates/recipesNewProduct.html
@@ -30,7 +30,7 @@
                         </div>
                         <div>
                             <button type="submit" class="btn bg-success mt-5">Add new Product</button>
-                            <a href="/recipes/list" class="btn btn-secondary mt-5">Back</a>
+                            <a th:href="@{/recipes/list}" class="btn btn-secondary mt-5">Back</a>
                         </div>
                     </form>
                 </div>
