--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -10,7 +10,7 @@
             <h1 class="my-2">Edit User <span th:text="${user.username}"></span></h1>
             <div class="row">
                    <div class="col col-md-6 pt-3">
-                     <a href="/users/list" class="btn btn-secondary">Back</a>
+                     <a th:href="@{/users/list}" class="btn btn-secondary">Back</a>
                    </div>
                     <div class="col col-md-6">
                         <form th:action="@{/users/delete/{username}(username=*{username})}" method="post">
