--- a/src/main/resources/templates/userNew.html
+++ b/src/main/resources/templates/userNew.html
@@ -9,7 +9,7 @@
         <main class="col-md-8 px-md-3 mt-5">
             <div class="row py-2">
                 <div class="col col-md-1">
-                    <a href="/users/list" class="btn btn-secondary ">Back</a>
+                    <a th:href="@{/users/list}" class="btn btn-secondary ">Back</a>
                 </div>
             </div>
 
