--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 	<div class="row">
 		<div class="col-sm-12 " id="wordle">
 			<div class="text-center">
-				<img src="/img/logo.jpg" alt="Leaf Food Logo" class="pic">
+				<img th:src="@{/img/logo.jpg}" alt="Leaf Food Logo" class="pic">
 			</div>
 			<div class="error msg-err text-center" th:if="${param.error}">
 				Invalid username and password.
