--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,7 +60,7 @@
                                 <p>There are items in stock that are about to expire</p>
                             </div>
                             <div th:if="${ not expires.isEmpty()}">
-                                <p>If you don't have a plan but you dont want to waste it and check for <a href="/chatquery">Ideas</a></p>
+                                <p>If you don't have a plan but you dont want to waste it and check for <a th:href="@{/chatquery}">Ideas</a></p>
                             </div>
                         </div>
                     </div>
